syntax = "proto3";

package protos;
option go_package = "./api/grpc/protos";

message KeyRequest {
  int32 key = 1;
}

message KeyValRequest {
  int32 key = 1;
  string value = 2;
}

message ValResponce{
  string result = 1;
}

message Empty {
}

service KvStorageService {
  rpc Get(KeyRequest) returns (ValResponce) {}
  rpc Put(KeyValRequest) returns (Empty) {}
  rpc Delete(KeyRequest) returns (Empty) {}
}
